@@ -200,6 +200,17 @@
 #
 #scan_other_esp
 
+# Help with "hidden_tags" setup. RefindPlus always makes the "hidden_tags" tool available
+# by default (even when the tool is not specified in the "showtools" list). This is done
+# to ensure that items hidden (always possible) can also be unhidden (only possible if
+# the "hidden_tags" tool is available). When this option is enabled, this "help" with
+# setup will be inactivated and the ability to unhide items will be solely based on
+# whether the "hidden_tags" tool has been explictly added to the "showtools" list.
+#
+# Inactive when commented out (Does not disable help with hidden_tags)
+#
+#disable_tag_help
+
 # RefindPlus will automatically enlarge icons and text when HiDPI screens are detected.
 # The detection is basic and based on detecting a minimum 1601px vertical resolution.
 # This setting allows overriding the detection as follows:
